--- a/.github/workflows/daily_refresh.yml
+++ b/.github/workflows/daily_refresh.yml
@@ -20,7 +20,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        pip install pandas numpy requests
+        pip install -r requirements.txt
     
     - name: Run pipeline
       run: |
